--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Main Content -->
     <div class="minimal-container">
         <nav class="minimal-nav">
-            <a href="#" class="nav-item active" data-page="home">Alex Thompson</a>
+            <a href="#" class="nav-item active" data-page="home">Cecilia Liu</a>
             <a href="#" class="nav-item" data-page="about">About Me</a>
             <a href="#" class="nav-item" data-page="education">Education</a>
             <a href="#" class="nav-item" data-page="skills">Skills</a>
