--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="minimal-layout">
     <!-- Year Header -->
-    <div class="year-header">2024</div>
+    <div class="year-header">2026</div>
 
     <!-- Main Content -->
     <div class="minimal-container">
@@ -29,7 +29,7 @@
         <div class="content-area">
             <!-- Home Page -->
             <div id="home-page" class="page-content active">
-                <h1 class="main-title">Alex Thompson</h1>
+                <h1 class="main-title">Cecilia Liu</h1>
                 <p class="subtitle">Computer Science Student</p>
                 <p class="subtitle">Data Visualization Enthusiast</p>
                 <div class="year-list">
