--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <!-- Home Page -->
             <div id="home-page" class="page-content active">
                 <h1 class="main-title">Cecilia Liu</h1>
-                <p class="subtitle">Computer Science Student</p>
-                <p class="subtitle">Data Visualization Enthusiast</p>
+                <p class="subtitle">Interactive Student</p>
+                <p class="subtitle">Data Visualization & Web Design Enthusiast</p>
                 <div class="year-list">
+                    <span>'25</span>
                     <span>'24</span>
                     <span>'23</span>
-                    <span>'22</span>
                 </div>
             </div>
 
@@ -65,10 +65,10 @@
                 <h2 class="page-title">Education</h2>
                 <div class="list-content">
                     <div class="list-item">
-                        <div class="item-year">2022 - Present</div>
+                        <div class="item-year">2026- - </div>
                         <div class="item-details">
-                            <h3>Bachelor of Science in Computer Science</h3>
-                            <p class="item-subtitle">University of Technology</p>
+                            <h3>Bachelor of Art</h3>
+                            <p class="item-subtitle">Simon Fraser University</p>
                             <p class="item-description">
                                 Relevant Coursework: Data Structures, Algorithms, Web Development, 
                                 Database Systems, Data Visualization, Machine Learning
@@ -76,12 +76,10 @@
                         </div>
                     </div>
                     <div class="list-item">
-                        <div class="item-year">2018 - 2022</div>
+                        <div class="item-year">2019 - 2022</div>
                         <div class="item-details">
                             <h3>High School Diploma</h3>
-                            <p class="item-subtitle">Central High School</p>
-                            <p class="item-description">
-                                Graduated with honors. President of Computer Science Club.
+                            <p class="item-subtitle">Overseas High School</p>
                             </p>
                         </div>
                     </div>
