--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h2 class="page-title">Education</h2>
                 <div class="list-content">
                     <div class="list-item">
-                        <div class="item-year">2026- - </div>
+                        <div class="item-year">2022 - 2027</div>
                         <div class="item-details">
                             <h3>Bachelor of Art</h3>
                             <p class="item-subtitle">Simon Fraser University</p>
@@ -93,25 +93,25 @@
                     <div class="skill-section">
                         <h3>Programming Languages</h3>
                         <div class="skill-list">
-                            JavaScript / Python / Java / C++ / SQL
+                            JavaScript / Python / Java
                         </div>
                     </div>
                     <div class="skill-section">
                         <h3>Web Technologies</h3>
                         <div class="skill-list">
-                            HTML5 / CSS3 / React / Node.js / D3.js
+                            HTML5 / CSS3
                         </div>
                     </div>
                     <div class="skill-section">
                         <h3>Tools & Frameworks</h3>
                         <div class="skill-list">
-                            Git / VS Code / Figma / MongoDB / PostgreSQL
+                            Git / VS Code / Figma
                         </div>
                     </div>
                     <div class="skill-section">
                         <h3>Data & Visualization</h3>
                         <div class="skill-list">
-                            Data Analysis / SVG / Canvas API / Pandas / NumPy
+                            Data Analysis / SVG 
                         </div>
                     </div>
                 </div>
