--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
                             <h3>Web Development Intern</h3>
                             <p class="item-subtitle">TechStart Solutions</p>
                             <ul class="item-list">
-                                <li>Developed responsive web applications using React and Node.js</li>
+                                <li>Developed responsive web applications</li>
                                 <li>Collaborated with design team to implement user interfaces</li>
-                                <li>Optimized website performance, reducing load time by 40%</li>
                             </ul>
                         </div>
                     </div>
@@ -139,25 +138,11 @@
                             <h3>Data Visualization Project</h3>
                             <p class="item-subtitle">Academic Project</p>
                             <ul class="item-list">
-                                <li>Created interactive data visualizations using D3.js and SVG</li>
+                                <li>Created interactive data visualizations using SVG</li>
                                 <li>Analyzed and visualized climate data trends</li>
-                                <li>Presented findings to department faculty</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="list-item">
-                        <div class="item-year">2023 - Present</div>
-                        <div class="item-details">
-                            <h3>Open Source Contributor</h3>
-                            <p class="item-subtitle">Various Projects</p>
-                            <ul class="item-list">
-                                <li>Contributed to several open-source JavaScript libraries</li>
-                                <li>Fixed bugs and implemented new features</li>
-                                <li>Collaborated with developers worldwide</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
             </div>
 
             <!-- Contact Page -->
