--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                     <div class="contact-info-minimal">
                         <p>I'm always interested in hearing about new opportunities and projects.</p>
                         <div class="contact-links-minimal">
-                            <a href="mailto:alex.thompson@email.com">alex.thompson@email.com</a>
-                            <a href="https://github.com/alexthompson" target="_blank">github.com/alexthompson</a>
-                            <a href="https://linkedin.com/in/alexthompson" target="_blank">linkedin.com/in/alexthompson</a>
+                            <a href="mailto:cecilialiu0433@gmail.com">cecilialiu0433@gmail.com</a>
+                            <a href="https://github.com/ceciliaaaaa33/Cecilialiu.github.io" target="_blank">github.com/cecilialiu0433</a>
+                            <a href="https://linkedin.com/in/cecilialiu0433" target="_blank">linkedin.com/in/cecilialiu0433</a>
                         </div>
                     </div>
                     <form class="minimal-form" id="contactForm">
