--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                             </ul>
                         </div>
                     </div>
+                </div>   
             </div>
 
             <!-- Contact Page -->
