--- a/visualizations.html
+++ b/visualizations.html
@@ -6,7 +6,7 @@
     <title>Data Visualizations - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.google.com/specimen/Bungee">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.google.com/specimen/Ubuntu">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Source+Sans+3:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -64,7 +64,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Alex Thompson. All rights reserved.</p>
+            <p>&copy; 2026 Cecilia Liu. All rights reserved.</p>
             <p><a href="index.html" class="footer-link">Back to Home</a></p>
         </div>
     </footer>
