--- a/visualizations.html
+++ b/visualizations.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.google.com/specimen/Bungee">
     <link rel="preconnect" href="https://fonts.google.com/specimen/Ubuntu">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Source+Sans+3:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.google.com/" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
