--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="page-title">About Me</h2>
                 <div class="text-content">
                     <p>
-                        I'm a dedicated Computer Science student with a deep interest in data visualization, 
+                        I'm a dedicated Interactive Art student with a deep interest in data visualization, 
                         web development, and creative coding. I believe in the power of technology to transform 
                         how we understand and interact with information.
                     </p>
