--- a/visualizations.html
+++ b/visualizations.html
@@ -10,6 +10,21 @@
     <link href="https://fonts.google.com/" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="nav-container">
+            <h1 class="logo">Portfolio</h1>
+            <ul class="nav-links">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="index.html#about" class="nav-link">About</a></li>
+                <li><a href="index.html#education" class="nav-link">Education</a></li>
+                <li><a href="index.html#skills" class="nav-link">Skills</a></li>
+                <li><a href="index.html#experience" class="nav-link">Experience</a></li>
+                <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+                <li><a href="visualizations.html" class="nav-link active viz-link">Visualizations</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <section class="viz-hero">
         <div class="container">
             <h1 class="viz-hero-title">Data Visualizations</h1>
